// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacetFilter renders facet select and search input 1`] = `
<Grid.Column
  lg={7}
  xl={7}
>
  <div
    className="FacetFilter FacetSelected"
  >
    <Select
      id="facet-filter-select"
      label="Breakdown"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "No Breakdown",
            "value": "",
          },
          Object {
            "label": "By Campaign",
            "value": "campaign_id",
          },
          Object {
            "label": "By IP Pool",
            "value": "ip_pool",
          },
          Object {
            "label": "By Mailbox Provider",
            "value": "mb_provider",
          },
          Object {
            "label": "By Sending Domain",
            "value": "sending_domain",
          },
        ]
      }
      value="campaign"
    />
    <div>
      <Label
        className="HiddenLabel"
        id="facet-filter-search"
        label="Search by Breakdown"
      />
      <TextField
        className="FacetSearchField"
        id="facet-filter-search"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Search"
        suffix={<Search />}
        value=""
      />
    </div>
  </div>
</Grid.Column>
`;

exports[`FacetFilter renders only facet select 1`] = `
<Grid.Column
  lg={3}
  xl={3}
>
  <div
    className="FacetFilter"
  >
    <Select
      id="facet-filter-select"
      label="Breakdown"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "No Breakdown",
            "value": "",
          },
          Object {
            "label": "By Campaign",
            "value": "campaign_id",
          },
          Object {
            "label": "By IP Pool",
            "value": "ip_pool",
          },
          Object {
            "label": "By Mailbox Provider",
            "value": "mb_provider",
          },
          Object {
            "label": "By Sending Domain",
            "value": "sending_domain",
          },
        ]
      }
    />
  </div>
</Grid.Column>
`;
